--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Set to https://<username>.github.io when hosting on GitHub Pages
 # (unless you are using a custom domain).
 
-url:                  http://www.brittwalker.com
+url:                  www.brittwalker.com
 
 # IMPORTANT: Set The "base URL" of your site.
 # When your site sits in a subdirectory, set to /<name of directory>
@@ -13,7 +13,7 @@ url:                  http://www.brittwalker.com
 # Use the empty string '' otherwise.
 # For GitHub project sites, this is usually the name of the project,
 # e.g. `/hydejack`.
-baseurl:               '/hydejack-starter-kit'
+baseurl:               ''
 
 
 # General settings
