--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ description:           >
   This is an experimental place for me to try to get into a writing habit.
 
 # A shorter description for the sidebar.
-tagline:               Just getting started.
+# tagline:               Just getting started.
 
 # A list of keywords for your blog
 keywords:              []
@@ -40,7 +40,7 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+# logo:                  /assets/img/logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
