--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ title:                 Brittany Walker
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
-description:           >
-  This is an experimental place for me to try to get into a writing habit.
+# description:           >
+#   This is an experimental place for me to try to get into a writing habit.
 
 # A shorter description for the sidebar.
 # tagline:               Just getting started.
