--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
+  - title:             Posts
+    url:               /posts/
   - title:             About
     url:               /about/
 
